--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -229,7 +229,7 @@ ul {
   position: relative;
 }
 .mainmenu ul li a {
-  color: #000000;
+  color: white;
   display: block;
   font-size: 14px;
   letter-spacing: 1px;
@@ -454,10 +454,6 @@ ul {
 .header-area.stick .logo a h2 span {
   background-color: #222;
   color: #fff;
-}
-.header-area.stick .mainmenu ul li a,
-.stick .mean-container a.meanmenu-reveal {
-  color: #ffffff;
 }
 
 .header-area.stick .menu-bar:after,
