--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,209 +50,43 @@
               </ul>
             </div>
             <!-- mainmenu end -->
-            <!-- mobile menu area start -->
-            <header class="mobail_menu">
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-xs-6 col-sm-6">
-                    <div class="gc_logo">
-                      <%= link_to root_path do %>
-                        <%= image_tag "header/logo.png", title: "Job Pro", class: "img-responsive" %>
-                      <% end %>
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-sm-6">
-                    <div class="cd-dropdown-wrapper">
-                      <a class="house_toggle" href="#0">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                          id="Capa_1" x="0px" y="0px" viewBox="0 0 31.177 31.177"
-                          style="enable-background:new 0 0 31.177 31.177;" xml:space="preserve" width="25px"
-                          height="25px">
-                          <g>
-                            <g>
-                              <path class="menubar"
-                                d="M30.23,1.775H0.946c-0.489,0-0.887-0.398-0.887-0.888S0.457,0,0.946,0H30.23    c0.49,0,0.888,0.398,0.888,0.888S30.72,1.775,30.23,1.775z"
-                                fill="#ffffff"></path>
-                            </g>
-                            <g>
-                              <path class="menubar"
-                                d="M30.23,9.126H12.069c-0.49,0-0.888-0.398-0.888-0.888c0-0.49,0.398-0.888,0.888-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,8.729,30.72,9.126,30.23,9.126z"
-                                fill="#ffffff"></path>
-                            </g>
-                            <g>
-                              <path class="menubar"
-                                d="M30.23,16.477H0.946c-0.489,0-0.887-0.398-0.887-0.888c0-0.49,0.398-0.888,0.887-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,16.079,30.72,16.477,30.23,16.477z"
-                                fill="#ffffff"></path>
-                            </g>
-                            <g>
-                              <path class="menubar"
-                                d="M30.23,23.826H12.069c-0.49,0-0.888-0.396-0.888-0.887c0-0.49,0.398-0.888,0.888-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,23.43,30.72,23.826,30.23,23.826z"
-                                fill="#ffffff"></path>
-                            </g>
-                            <g>
-                              <path class="menubar"
-                                d="M30.23,31.177H0.946c-0.489,0-0.887-0.396-0.887-0.887c0-0.49,0.398-0.888,0.887-0.888H30.23    c0.49,0,0.888,0.398,0.888,0.888C31.118,30.78,30.72,31.177,30.23,31.177z"
-                                fill="#ffffff"></path>
-                            </g>
-                          </g>
-                        </svg>
-                      </a>
-                      <nav class="cd-dropdown">
-                        <h2><a href="#">Job<span>Pro</span></a></h2>
-                        <a href="#0" class="cd-close">Close</a>
-                        <ul class="cd-dropdown-content">
-                          <li>
-                            <form class="cd-search">
-                              <input type="search" placeholder="Search...">
-                            </form>
-                          </li>
-                          <li class="has-children">
-                            <a href="#">Home</a>
-
-                            <ul class="cd-secondary-dropdown is-hidden">
-                              <li class="go-back"><a href="#0">Menu</a></li>
-                              <li>
-                                <a href="index.html">Home1</a>
-                              </li>
-                              <!-- .has-children -->
-
-                              <li>
-                                <a href="index_II.html">Home2</a>
-                              </li>
-                              <li>
-                                <a href="index_map.html">Home3</a>
-                              </li>
-                              <!-- .has-children -->
-
-                            </ul>
-                            <!-- .cd-secondary-dropdown -->
-                          </li>
-                          <!-- .has-children -->
-
-
-                          <li class="has-children">
-                            <a href="#">Job</a>
-
-                            <ul class="cd-secondary-dropdown is-hidden">
-                              <li class="go-back"><a href="#0">Menu</a></li>
-                              <li>
-                                <a href="listing_left.html">Listing-Left</a>
-                              </li>
-                              <!-- .has-children -->
-
-                              <li>
-                                <a href="listing_right.html">Listing-Right</a>
-                              </li>
-                              <!-- .has-children -->
-
-                              <li>
-                                <a href="listing_single.html">Listing-Single</a>
-                              </li>
-                              <!-- .has-children -->
-
-
-                            </ul>
-                            <!-- .cd-secondary-dropdown -->
-                          </li>
-                          <!-- .has-children -->
-                          <li class="has-children">
-                            <a href="#">candidates</a>
-
-                            <ul class="cd-secondary-dropdown is-hidden">
-                              <li class="go-back"><a href="#0">Menu</a></li>
-                              <li><a href="company_listing.html">Company-Listing</a></li>
-                              <li><a href="company_listing_single.html">Company-Single</a>
-                              </li>
-                              <li><a href="candidate_listing.html">candidate-Listing</a>
-                              </li>
-                              <li><a href="candidate_profile.html">candidate-Profile</a>
-                              </li>
-                              <!-- .has-children -->
-
-                            </ul>
-                            <!-- .cd-secondary-dropdown -->
-                          </li>
-                          <!-- .has-children -->
-                          <li class="has-children">
-                            <a href="#">Pages</a>
-
-                            <ul class="cd-secondary-dropdown is-hidden">
-                              <li class="go-back"><a href="#0">Menu</a></li>
-                              <li><a href="about.html">About-Us</a></li>
-                              <li><a href="404%20error.html">404</a></li>
-                              <li><a href="add_postin.html">Add-Posting</a></li>
-                              <li><a href="login.html">Login</a></li>
-                              <li><a href="register.html">Register</a></li>
-                              <li><a href="pricing.html">Pricing</a></li>
-                              <!-- .has-children -->
-
-                            </ul>
-                            <!-- .cd-secondary-dropdown -->
-                          </li>
-                          <li class="has-children">
-                            <a href="#">Blog</a>
-
-                            <ul class="cd-secondary-dropdown is-hidden">
-                              <li class="go-back"><a href="#0">Menu</a></li>
-                              <li>
-                                <a href="blog_left.html">Blog-Left</a>
-                              </li>
-                              <!-- .has-children -->
-
-                              <li>
-                                <a href="blog_right.html">Blog-Right</a>
-                              </li>
-                              <!-- .has-children -->
-
-                              <li>
-                                <a href="blog_single_left.html">Blog-Single-Left</a>
-                              </li>
-                              <!-- .has-children -->
-
-                              <li>
-                                <a href="blog_single_right.html">Blog-Single-Left</a>
-                              </li>
-                              <!-- .has-children -->
-
-                            </ul>
-                            <!-- .cd-secondary-dropdown -->
-                          </li>
-                          <!-- .has-children -->
-                          <!-- .has-children -->
-                          <li>
-                            <%= link_to "Contact", contact_path %>
-                          </li>
-                          <li>
-                            <a href="register.html">Sign Up</a>
-                          </li>
-                          <li>
-                            <a href="login.html">Login</a>
-                          </li>
-
-                        </ul>
-                        <!-- .cd-dropdown-content -->
-
-
-
-                      </nav>
-                      <!-- .cd-dropdown -->
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- .cd-dropdown-wrapper -->
-            </header>
           </div>
         </div>
-        <!-- mobile menu area end -->
         <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12 hidden-sm hidden-xs">
-          <div class="jp_navi_right_btn_wrapper">
-            <ul>
-              <li><a href="register.html"><i class="fa fa-user"></i>&nbsp; SIGN UP</a></li>
-              <li><a href="login.html"><i class="fas fa-sign-in-alt"></i>&nbsp; LOGIN</a></li>
-            </ul>
-          </div>
+          <% if user_signed_in? %>
+            <div class="infor-dropdow">
+              <div class="btn-group">
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <% if current_user.avatar.url.present? %>
+                    <%= image_tag current_user.avatar.url, class: "avatar" %>
+                  <% end %>
+                  <%= current_user.name %><i class="fa fa-angle-down"></i>
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                  <div class="dropdown-divider"></div>
+                  <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                </div>
+              </div>
+            </div>
+          <% else %>
+            <div class="jp_navi_right_btn_wrapper">
+              <ul>
+                <li>
+                  <%= link_to new_user_registration_path do %>
+                    <i class="fa fa-user"></i>&nbsp; SIGN UP
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_user_session_path do %>
+                  <i class="fas fa-sign-in-alt"></i>&nbsp; LOGIN
+                  <% end %>
+                </li>
+              </ul>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
