--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,22 @@
       <%= render "layouts/header" %>
       <%= yield :after_menu %>
     </div>
-
+    <% unless check_page yield :title %>
+      <div class="jp_tittle_main_wrapper">
+        <div class="jp_tittle_img_overlay"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <div class="jp_tittle_heading_wrapper">
+                <div class="jp_tittle_heading">
+                  <h2><%= yield :title %></h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
     <%= yield %>
     <%= render "layouts/footer" %>
   </body>
