--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -54,3 +54,11 @@
     width: 100%;
   }
 }
+
+.login_btn {
+  width: 100%;
+  line-height: 1.5em;
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
