--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <%= toastr_flash %>
     <div class="jp_top_header_img_wrapper">
       <%= yield :before_menu %>
       <%= render "layouts/header" %>
