--- a/app/views/devise/registrations/_employee_form.html.erb
+++ b/app/views/devise/registrations/_employee_form.html.erb
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="form-group">
-    <%= recaptcha_tags %>
+    <!-- <%= recaptcha_tags %> -->
   </div>
   <div class="login_btn_wrapper register_btn_wrapper login_wrapper ">
     <%= f.submit "register", class: "btn btn-primary login_btn" %>
