--- a/app/views/devise/registrations/_employee_form.html.erb
+++ b/app/views/devise/registrations/_employee_form.html.erb
@@ -32,7 +32,7 @@
         <%= f.file_field :avatar %>
         <%= f.hidden_field :avatar_cache %>
       <% end %>
-      <p>PNG, JPGE - 300KB MAX PREFERRED CV FORMAT - DOCX FILE</p>
+      <p>JPG, JPEG, GIF, PNG - 5MB MAX SIZE</p>
     </div>
     <!--Form Group-->
     <div class="form-group col-md-6 col-sm-6 col-xs-12">
