--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<% provide :title, "Forgot your password?" %>
+<div class="login_form_wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "new_user"}) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="formsix-pos">
+          <div class="form-group i-email">
+            <%= f.label :email, "Email: ", class: "require" %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+          </div>
+        </div>
+        <div class="login_btn_wrapper">
+          <%= f.submit "Send me reset password instructions", class: "btn btn-primary login_btn" %>
+        </div>
+        <% end %>
+      <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
