--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,6 +59,8 @@
                 <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <% if current_user.avatar.url.present? %>
                     <%= image_tag current_user.avatar.url, class: "avatar" %>
+                  <% else %>
+                    <%= image_tag "content/default-avatar.png", class: "avatar" %>
                   <% end %>
                   <%= current_user.name %><i class="fa fa-angle-down"></i>
                 </button>
