--- a/app/views/devise/registrations/_employee_form.html.erb
+++ b/app/views/devise/registrations/_employee_form.html.erb
@@ -43,7 +43,7 @@
     <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <div class="check-box text-center">
         <%= f.check_box :role %>
-        <%= f.label :role, "For Candidate" %>
+        <%= f.label :role, "For Recruiter" %>
       </div>
     </div>
   </div>
