edit user profile

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
 <% provide :title, "Sign up" %>
+<% provide :button, "Resign" %>
+<% provide :class, "require" %>
+
 <div class="register_section">
   <!-- register_form_wrapper -->
   <div class="register_tab_wrapper">
@@ -9,6 +12,11 @@
             <div class="tab-content">
               <div class="tab-pane fade register_left_form active in" id="contentOne-1">
                 <%= render "devise/registrations/employee_form" %>
+                <div class="login_message">
+                  <p>Already a member?
+                    <%= link_to "Log in", new_session_path(resource_name) %>
+                  </p>
+                </div>
               </div>
             </div>
             <p class="btm_txt_register_form">In case you are using a public/shared computer we recommend that you logout
