--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -42,8 +42,15 @@
 
 .avatar {
   display: inline-block;
-  width: 35px;
   border-radius: 50%;
+
+  &.ava-medium {
+    width: 150px;
+  }
+
+  &.ava-small {
+    width: 35px;
+  }
 }
 
 .infor-dropdow {
@@ -66,4 +73,31 @@
 .field_with_errors input {
   border-color: red !important;
   background-color: #ff535340 !important;
+}
+
+a.dropdown-item {
+  display: block;
+  padding: 3px 10px;
+  &:hover {
+    background-color: #23C0E9;
+    color: white;
+  }
+}
+
+.dropdown-toggle span {
+  font-size: 18px;
+  margin-left: 10px;
+
+  i {
+    margin-left: 2px;
+  }
+}
+
+.point {
+  cursor: pointer;
+}
+
+.subtext {
+  font-size: 13px;
+  font-style: italic;
 }
