--- a/app/views/devise/registrations/_employee_form.html.erb
+++ b/app/views/devise/registrations/_employee_form.html.erb
@@ -18,19 +18,30 @@
     </div>
     <!--Form Group-->
     <div class="form-group col-md-6 col-sm-6 col-xs-12">
-      <%= f.label :password, "Password:", class: "require" %>
+      <%= f.label :password, "Password:", class: yield(:class) %> <span class="subtext">(leave blank to keep password)</span>
       <%= f.password_field :password %>
     </div>
     <!--Form Group-->
     <div class="form-group col-md-6 col-sm-6 col-xs-12">
-      <%= f.label :password_confirmation, "Password confirmation:", class: "require" %>
+      <%= f.label :password_confirmation, "Password confirmation:", class: yield(:class) %>
       <%= f.password_field :password_confirmation %>
     </div>
     <!--Form Group-->
     <div class="form-group col-md-6 col-sm-6 col-xs-12 custom_input">
-      <%= f.label :avatar, "Avatar:" do %>
-        <%= f.file_field :avatar %>
-        <%= f.hidden_field :avatar_cache %>
+      <% unless yield(:title).eql?("Edit #{resource_name.to_s.humanize}") %>
+        <%= f.label :avatar, "Avatar:" do %>
+          <%= f.file_field :avatar %>
+          <%= f.hidden_field :avatar_cache %>
+        <% end %>
+      <% else %>
+        <% if current_user.avatar.url.present? %>
+          <%= f.label :avatar, class: "point" do %>
+            <%= image_tag current_user.avatar.url, class: "avatar ava-medium" %>
+          <% end %>
+          <%= f.file_field :avatar, class: "hidden" %>
+        <% else %>
+          <%= image_tag "content/default-avatar.png", class: "avatar ava-medium" %>
+        <% end %>
       <% end %>
       <p>JPG, JPEG, GIF, PNG - 5MB MAX SIZE</p>
     </div>
@@ -39,23 +50,24 @@
       <%= f.label :birthday, "Birthday:" %>
       <%= f.date_field :birthday, class: "birthday" %>
     </div>
-
+    <% unless yield(:title).eql?("Edit #{resource_name.to_s.humanize}")  %>
     <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <div class="check-box text-center">
         <%= f.check_box :role %>
         <%= f.label :role, "For Recruiter" %>
       </div>
     </div>
+    <% else %>
+    <div class="form-group col-md-6 col-sm-6 col-xs-12">
+      <%= f.label :current_password, "Current Password:", class: "require" %>
+      <%= f.password_field :current_password %>
+    </div>
+    <% end %>
   </div>
   <div class="form-group">
     <!-- <%= recaptcha_tags %> -->
   </div>
   <div class="login_btn_wrapper register_btn_wrapper login_wrapper ">
-    <%= f.submit "register", class: "btn btn-primary login_btn" %>
+    <%= f.submit yield(:button), class: "btn btn-primary login_btn" %>
   </div>
-<% end %>
-<div class="login_message">
-  <p>Already a member? 
-    <%= link_to "Log in", new_session_path(resource_name) %>
-  </p>
-</div>
+  <% end %>
