--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,15 +57,12 @@
             <div class="infor-dropdow">
               <div class="btn-group">
                 <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <% if current_user.avatar.url.present? %>
-                    <%= image_tag current_user.avatar.url, class: "avatar ava-small" %>
-                  <% else %>
-                    <%= image_tag "content/default-avatar.png", class: "avatar ava-small" %>
-                  <% end %>
+                  <%= show_avatar "small" %>
                   <span><%= current_user.name %> <i class="fa fa-angle-down"></i></span>
                 </button>
                 <div class="dropdown-menu">
                   <%= link_to "Profile", edit_user_registration_path, class: "dropdown-item" %>
+                  <%= link_to "Your resumes", resumes_path, class: "dropdown-item" %>
                   <a class="dropdown-item" href="#">Another action</a>
                   <a class="dropdown-item" href="#">Something else here</a>
                   <div class="dropdown-divider"></div>
