--- a/app/views/resumes/_form_resume.html.erb
+++ b/app/views/resumes/_form_resume.html.erb
@@ -1,4 +1,4 @@
-<%= form_for resume do |f| %>
+<%= form_for resume, html: {multipart: true} do |f| %>
   <div class="row">
     <div class="col-lg-12 mb-5">
     <%= f.text_field :title, placeholder: "Resume title", class: "form-control", required: :true %>
@@ -8,7 +8,13 @@
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
       <div class="jp_cp_left_side_wrapper">
         <div class="jp_cp_left_pro_wallpaper">
-          <%= resume_avatar resume, "medium" %>
+          <%= f.label :avatar, class: "select-avatar point" do %>
+            <%= resume_avatar resume %>
+            <div class="top-over">
+              <span>Select Image</span>
+            </div>
+          <% end %>
+          <%= f.file_field :avatar, class: "chose-img hidden" %>
           <div class="form-group">
             <h2><%= current_user.name %></h2>
           </div>
@@ -19,81 +25,67 @@
         <div class="jp_cp_rd_wrapper">
           <h2>PERSONAL DETAILS</h2>
           <div class="form-group">
-            <%= f.label :birthday %>
+            <%= f.label :birthday, "Birthday: " %>
             <%= current_user.birthday.strftime("%d/%m/%Y") %>
           </div>
           <div class="form-group">
-            <%= f.label :address %>
+            <%= f.label :address, "Address: ", class: "require" %>
+            <%= f.text_field :address, class: "form-control" %>
           </div>
-          <div class="form-group"></div>
-          <div class="form-group"></div>
-          <div class="form-group"></div>
-          <div class="form-group"></div>
+          <div class="form-group">
+            <%= f.label :email, "Email: ", class: "require" %>
+            <%= f.email_field :email, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :phone_number, "Phone Number: ", class: "require" %>
+            <%= f.text_field :phone_number, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :gender, "Gender: " %>
+            <%= "male" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :website, "Website: " %>
+            <%= f.text_field :website, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <h2>Skills</h2>
+            <%= f.fields_for :resume_skills do |skill| %>
+              <%= render "resume_skill_fields", f: skill %>
+            <% end %>
+            <div class="links">
+              <%= link_to_add_association f, :resume_skills, class: "btn btn-success" do %>
+                <i class="fas fa-plus"></i>
+                <span> Add</span>
+              <% end %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-          <div class="jp_cp_accor_heading_wrapper">
-            <h2>Education</h2>
-            <p>Proin gravida nibh vel velit quet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulpuate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt.</p>
-          </div>
-        </div>
-        <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
           <div class="accordion_wrapper abt_page_2_wrapper">
-            <div class="panel-group" id="accordion_threeLeft">
-
-
-              <!-- /.panel-default -->
-              <div class="panel panel-default">
-                <div class="panel-heading bell">
-                  <h4 class="panel-title">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion_threeLeft" href="#collapseTwentyLeftThree" aria-expanded="false">
-                DIPLOMA IN COMPUTER 
-                </a>
-                  </h4>
-                </div>
-                <div id="collapseTwentyLeftThree" class="panel-collapse collapse" aria-expanded="false" role="tablist">
-                  <div class="panel-body">
-                    Praesent in nisl egestas mauris aliquam luctus. Ut auctor faucibus orci, nec semper purus ultrices idorbi nec lorem risus orbi vitae felis gravida Pellentesque id eros quis massa convallis feugiat eu quis urna.
-                  </div>
-                </div>
+            <div id="add_on">
+              <%= f.fields_for :add_ons do |add_on| %>
+                <%= render "add_on_fields", f: add_on %>
+              <% end %>
+              <div class="links">
+                <%= link_to_add_association f, :add_ons, class: "btn btn-success" do %>
+                  <i class="fas fa-plus"></i>
+                  <span> Add</span>
+                <% end %>
               </div>
-              <div class="panel panel-default">
-                <div class="panel-heading bell">
-                  <h4 class="panel-title">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion_threeLeft" href="#collapseTwentyLeftThree2" aria-expanded="false">
-                HIGHER SECONDRY EDUCATION 
-                </a>
-                  </h4>
-                </div>
-                <div id="collapseTwentyLeftThree2" class="panel-collapse collapse" aria-expanded="false" role="tablist">
-                  <div class="panel-body">
-                    Praesent in nisl egestas mauris aliquam luctus. Ut auctor faucibus orci, nec semper purus ultrices idorbi nec lorem risus orbi vitae felis gravida Pellentesque id eros quis massa convallis feugiat eu quis urna.
-                  </div>
-                </div>
-              </div>
-              <div class="panel panel-default">
-                <div class="panel-heading bell">
-                  <h4 class="panel-title">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion_threeLeft" href="#collapseTwentyLeftThree3" aria-expanded="false">
-                HIGH SCHOOL DEGREE
-                </a>
-                  </h4>
-                </div>
-                <div id="collapseTwentyLeftThree3" class="panel-collapse collapse" aria-expanded="false" role="tablist">
-                  <div class="panel-body">
-                    Praesent in nisl egestas mauris aliquam luctus. Ut auctor faucibus orci, nec semper purus ultrices idorbi nec lorem risus orbi vitae felis gravida Pellentesque id eros quis massa convallis feugiat eu quis urna.
-                  </div>
-                </div>
-              </div>
-              <!-- /.panel-default -->
             </div>
-            <!--end of /.panel-group-->
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <%= f.submit "Create", class: "btn btn-info float-right" %>
     </div>
   </div>
 <% end %>
