--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,8 +9,8 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <div role="tabpanel">
-            <div class="card p-5">
-              <div class="tab-pane register_left_form" id="contentOne-1">
+            <div class="tab-content">
+              <div class="tab-pane fade register_left_form active in" id="contentOne-1">
                 <%= render "devise/registrations/employee_form" %>
               </div>
             </div>
