--- a/app/views/resumes/_resume.html.erb
+++ b/app/views/resumes/_resume.html.erb
@@ -6,9 +6,7 @@
       </div>
       <div class="jp_recent_resume_cont_wrapper">
         <h3><%= resume.title %></h3>
-        <p>
-          <%= resume.position %>
-        </p>
+        <p><i class="fa fa-folder-open-o"></i> <a href="#">UI Designer</a></p>
       </div>
       <div class="jp_recent_resume_btn_wrapper">
         <i class="fas fa-clock"></i>
@@ -16,18 +14,18 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <%= link_to resume, method: :delete, data: {confirm: "Are you sure want to delete this resume?"}, class: "btn btn-outline-danger float-right" do %>
-          <i class="fas fa-trash"></i>
-          Delete
+      <div class="col float-right">
+        <%= link_to resume_path(resume), class: "btn btn-outline-secondary" do %>
+          <i class="fas fa-eye"></i>
+          Show
         <% end %>
-        <%= link_to edit_resume_path(resume), class: "btn btn-outline-secondary float-right mr-2" do %>
+        <%= link_to edit_resume_path(resume), class: "btn btn-outline-secondary" do %>
           <i class="far fa-edit"></i>
           Edit
         <% end %>
-        <%= link_to resume_path(resume), class: "btn btn-outline-secondary float-right mr-2" do %>
-          <i class="fas fa-eye"></i>
-          Show
+        <%= link_to resume, class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure want to delete this resume?"} do %>
+          <i class="fas fa-trash"></i>
+          Delete
         <% end %>
       </div>
     </div>
