--- a/app/views/resumes/_form_resume.html.erb
+++ b/app/views/resumes/_form_resume.html.erb
@@ -9,7 +9,7 @@
       <div class="jp_cp_left_side_wrapper">
         <div class="jp_cp_left_pro_wallpaper">
           <%= f.label :avatar, class: "select-avatar point" do %>
-            <%= resume_avatar resume %>
+            <%= resume_avatar resume, "large" %>
             <div class="top-over">
               <span>Select Image</span>
             </div>
