--- a/app/views/resumes/_resume_skill_fields.html.erb
+++ b/app/views/resumes/_resume_skill_fields.html.erb
@@ -7,7 +7,7 @@
   <div class="form-group row">
     <%= f.label :skill_id, 'Skill name: ', class: "col-sm-4 col-form-label" %>
     <div class="col-sm-8">
-      <%= f.select :skill_id, options_for_select(@skills), {}, {class: "js-source-states form-control"} %>
+      <%= f.select :skill_id, options_for_select(@skills, f.object.skill_id), {}, {class: "js-source-states form-control"} %>
     </div>
   </div>
   <div class="form-group row">
