--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,4 +1,5 @@
 <%= provide :title, "Add New Resume" %>
+<%= provide :btn, "Create" %>
 <div class="jp_cp_profile_main_wrapper">
   <div class="container">
     <div class="row">
