--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -16,14 +16,15 @@
             <i class="fas fa-bell"></i> Notifications
           </a>
         </li>
-        <li class="nav-item dropdown show">
-          <a class="nav-link" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        <li class="nav-item dropdown">
+          <a class="nav-link" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= show_avatar "small" %>
             <p class="d-lg-none d-md-block">
               Account
             </p>
-          <div class="ripple-container"></div></a>
-          <div class="dropdown-menu dropdown-menu-right show" aria-labelledby="navbarDropdownProfile">
+            <div class="ripple-container"></div>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
             <a class="dropdown-item" href="#">Profile</a>
             <a class="dropdown-item" href="#">Settings</a>
             <div class="dropdown-divider"></div>
