--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -10,10 +10,7 @@
             <h3><%= current_user.name %></h3>
           </div>
           <div class="jp_cp_rd_wrapper">
-            <ul>
-              <li><a href="#"><i class="fa fa-download"></i> &nbsp;Download Resume</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i> &nbsp;Contact candidate</a></li>
-            </ul>
+            <%= render "user_status" %>
           </div>
         </div>
       </div>
