--- a/app/views/resumes/_add_on_fields.html.erb
+++ b/app/views/resumes/_add_on_fields.html.erb
@@ -11,6 +11,6 @@
     <%= f.text_field :time, class: "form-control", placeholder: "Time" %>
   </div>
   <div class="form-group">
-    <%= f.text_area :content, class: "form-control", placeholder: "Content" %>
+    <%= f.text_area :content, rows: 5,class: "form-control", placeholder: "Content" %>
   </div>
 </div>
