--- a/app/views/resumes/_resume.html.erb
+++ b/app/views/resumes/_resume.html.erb
@@ -1,4 +1,9 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div class="resume-<%= resume.id %> primary_resume">
+    <% if resume.public_status? %>
+      <i class="fas fa-star" ></i>
+    <% end %>
+  </div>
   <div class="jp_recent_resume_box_wrapper">
     <div class="row">
       <div class="jp_recent_resume_img_wrapper">
@@ -17,18 +22,23 @@
     </div>
     <div class="row">
       <div class="col">
-        <%= link_to resume, method: :delete, data: {confirm: "Are you sure want to delete this resume?"}, class: "btn btn-outline-danger float-right" do %>
+        <%= link_to resume, method: :delete, data: {confirm: "Are you sure want to delete this resume?"}, class: "btn btn-outline-danger float-right btn-sm" do %>
           <i class="fas fa-trash"></i>
           Delete
         <% end %>
-        <%= link_to edit_resume_path(resume), class: "btn btn-outline-secondary float-right mr-2" do %>
+        <%= link_to edit_resume_path(resume), class: "btn btn-outline-secondary btn-sm float-right mr-2" do %>
           <i class="far fa-edit"></i>
           Edit
         <% end %>
-        <%= link_to resume_path(resume), class: "btn btn-outline-secondary float-right mr-2" do %>
+        <%= link_to resume_path(resume), class: "btn btn-outline-info btn-sm float-right mr-2" do %>
           <i class="fas fa-eye"></i>
           Show
         <% end %>
+        <span id="resume-status-<%= resume.id %>">
+          <% if resume.private_status? %>
+            <%= render "public_status", resume: resume %>
+          <% end %>
+        </span>
       </div>
     </div>
   </div>
