--- a/app/views/layouts/application_admin.html.erb
+++ b/app/views/layouts/application_admin.html.erb
@@ -7,8 +7,10 @@
 
     <%= stylesheet_link_tag "admin_application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag Ckeditor.cdn_url %>
   </head>
   <body class="body admin-layout">
+    <%= toastr_flash %>
     <div class="sidebar" data-color="purple" data-background-color="white">
       <%= render "layouts/sidebar_admin" %>
     </div>
