edit_admin_user

--- a/app/views/layouts/application_admin.html.erb
+++ b/app/views/layouts/application_admin.html.erb
@@ -20,6 +20,8 @@
       <!-- End Navbar -->
       <div class="content">
         <div class="container-fluid">
+          <p class="notice"><%= notice %></p>
+          <p class="alert"><%= alert %></p>
           <%= yield %>
         </div>
       </div>
