--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -25,7 +25,7 @@
             <div class="ripple-container"></div>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-            <a class="dropdown-item" href="#">Profile</a>
+            <%= link_to "Profile", edit_admin_user_registration_path, class: "dropdown-item" %>
             <a class="dropdown-item" href="#">Settings</a>
             <div class="dropdown-divider"></div>
             <%= link_to 'Log out', destroy_admin_user_session_path, method: :delete, class: "dropdown-item" %>
