--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,3 +1,12 @@
 <div class="row">
-  <%= render partial: 'job', collection: @jobs, as: :job %>
+  <div class="col-md-12">
+    <div class="row">
+      <%= render "search_job" %>
+    </div>
+  </div>
+  <div class="col-md-12">
+    <div class="row">
+      <%= render partial: 'job', collection: @jobs, as: :job %>
+    </div>
+  </div>
 </div>
