--- a/app/views/static_pages/_jp_first_sidebar_main_wrapper_left_middle_content_all_time.html.erb
+++ b/app/views/static_pages/_jp_first_sidebar_main_wrapper_left_middle_content_all_time.html.erb
@@ -16,9 +16,9 @@
                       </div>
                       <div class="jp_job_post_right_cont">
                         <h4><%= job.title %></h4>
-                        <p><%= index %></p>
+                        <p><%= job.company.name %></p>
                         <ul>
-                          <li><i class="fa fa-cc-paypal"></i>&nbsp; $12K - 15k P.A.</li>
+                          <li><i class="fa fa-cc-paypal"></i>&nbsp; <%= number_with_delimiter job.salary %>$</li>
                           <li><i class="fa fa-map-marker"></i>&nbsp; <%= job.address %></li>
                         </ul>
                       </div>
@@ -27,7 +27,7 @@
                       <div class="jp_job_post_right_btn_wrapper">
                         <ul>
                           <li><a href="#"><i class="fa fa-heart-o"></i></a></li>
-                          <li><a href="#">All Time</a></li>
+                          <li><a href="#"><%= checked_type_job job %></a></li>
                           <li><a href="#">Apply</a></li>
                         </ul>
                       </div>
