--- a/app/views/admin/jobs/_job.html.erb
+++ b/app/views/admin/jobs/_job.html.erb
@@ -22,7 +22,7 @@
     <% end %>
     <div class="card-horizontal">
       <div class="company-image">
-        <%= show_company_avatar "large" %>
+        <%= show_company_avatar(job, "large") %>
       </div>
       <div class="card-body">
         <h4 class="card-title job-title"><%= job.title %></h4>
