--- a/app/views/static_pages/_jp_first_sidebar_main_wrapper_left_middle_content_full_time.html.erb
+++ b/app/views/static_pages/_jp_first_sidebar_main_wrapper_left_middle_content_full_time.html.erb
@@ -18,7 +18,7 @@
                         <h4><%= job.title %></h4>
                         <p><%= job.company.name %></p>
                         <ul>
-                          <li><i class="fa fa-cc-paypal"></i>&nbsp; <%= number_with_delimiter job.salary %>$</li>
+                          <li><i class="fas fa-money-bill-wave"></i>&nbsp; <%= number_with_delimiter job.salary %>$</li>
                           <li><i class="fa fa-map-marker"></i>&nbsp; <%= job.address %></li>
                         </ul>
                       </div>
