--- a/app/assets/stylesheets/custom_front_end.scss
+++ b/app/assets/stylesheets/custom_front_end.scss
@@ -6,29 +6,6 @@
     width: 100%;
   }
 
-  .avatar {
-    display: inline-block;
-    object-fit: cover;
-    object-position: center;
-
-    &.ava-medium {
-      width: 150px;
-      height: 150px;
-    border-radius: 50%;
-    }
-
-    &.ava-small {
-      width: 35px;
-      height: 35px;
-      border-radius: 50%;
-    }
-
-    &.ava-large {
-      width: 100%;
-      padding: 5px
-    }
-  }
-
   .dropdown-toggle span {
     font-size: 18px;
     margin-left: 10px;
@@ -45,6 +22,29 @@
       background-color: #23C0E9;
       color: white;
     }
+  }
+}
+
+.avatar {
+  display: inline-block;
+  object-fit: cover;
+  object-position: center;
+
+  &.ava-medium {
+    width: 150px;
+    height: 150px;
+  border-radius: 50%;
+  }
+
+  &.ava-small {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+  }
+
+  &.ava-large {
+    width: 100%;
+    padding: 5px
   }
 }
 
@@ -76,5 +76,27 @@
       font-weight: 600;
       text-transform: capitalize;
     }
+  }
+}
+
+.trix-content {
+  h2 {
+    margin: 15px;
+  }
+  
+  h2::after {
+    content: "";
+    display: block;
+    width: 15%;
+    height: 3px;
+    background-color: #23c0e9;
+  }
+
+  p {
+    text-align: justify;
+  }
+
+  li {
+    list-style: inside;
   }
 }
