--- a/app/assets/stylesheets/style_II.css
+++ b/app/assets/stylesheets/style_II.css
@@ -3389,6 +3389,7 @@ ul{
 	font-size:36px;
 	color:#ffffff;
 	font-weight:bold;
+	text-transform: capitalize;
 }
 .jp_tittle_breadcrumb_main_wrapper{
 	float:left;
@@ -5537,16 +5538,19 @@ input[type="checkbox"]:checked + label:after {
 	font-size:16px;
 	color:#000000;
 	font-weight:bold;
-	padding-top:40px;
+	padding-top:20px;
+	text-transform: capitalize;
 }
 .jp_job_listing_single_post_right_cont_wrapper p{
 	font-size:16px;
 	color:#23c0e9;
-	padding-top:10px;
+	padding:10px;
+	text-transform: capitalize;
+	text-align: justify;
 }
 .jp_job_post_right_overview_btn_wrapper{
 	text-align:center;
-	padding-bottom:50px;
+	padding-bottom:10px;
 	border-bottom:1px solid #e9e9e9;
 }
 .jp_job_post_right_overview_btn ul{
@@ -5607,7 +5611,7 @@ input[type="checkbox"]:checked + label:after {
 	width:100%;
 }
 .jp_listing_overview_list_main_wrapper2{
-	padding-top:40px;
+	padding-top:20px;
 }
 .jp_listing_overview_list_outside_main_wrapper{
 	float:left;
@@ -5633,6 +5637,11 @@ input[type="checkbox"]:checked + label:after {
 	font-weight:bold;
 	color:#000000;
 }
+
+.jp_listing_list_icon_cont_wrapper ul li.address{
+	white-space: pre-line;
+}
+
 .jp_listing_right_bar_btn_wrapper{
 	float:left;
 	width:100%;
@@ -5640,7 +5649,6 @@ input[type="checkbox"]:checked + label:after {
 }
 .jp_listing_right_bar_btn ul{
 	display:inline-block;
-	margin-top:40px;
 }
 .jp_listing_right_bar_btn li:first-child a{
 	float:left;
