--- a/app/views/static_pages/_jp_first_sidebar_main_wrapper_left_middle_content_part_time.html.erb
+++ b/app/views/static_pages/_jp_first_sidebar_main_wrapper_left_middle_content_part_time.html.erb
@@ -18,8 +18,8 @@
                         <h4><%= job&.title %></h4>
                         <p><%= job&.company&.name %></p>
                         <ul>
-                          <li><i class="fa fa-cc-paypal"></i>&nbsp; <%= number_with_delimiter job&.salary %>$</li>
-                          <li><i class="fa fa-map-marker"></i>&nbsp; <%= job&.address %></li>
+                          <li><i class="fas fa-money-bill-wave"></i>&nbsp; <%= number_with_delimiter job.salary %>$</li>
+                          <li><i class="fa fa-map-marker"></i>&nbsp; <%= job.address %></li>
                         </ul>
                       </div>
                     </div>
@@ -35,15 +35,6 @@
                   </div>
                 </div>
                 <div class="jp_job_post_keyword_wrapper">
-                  <ul>
-                    <li><i class="fa fa-tags"></i>Keywords :</li>
-                    <li><a href="#">ui designer,</a></li>
-                    <li><a href="#">developer,</a></li>
-                    <li><a href="#">senior</a></li>
-                    <li><a href="#">it company,</a></li>
-                    <li><a href="#">design,</a></li>
-                    <li><a href="#">call center</a></li>
-                  </ul>
                 </div>
               </div>
             <% end %>
