--- a/app/views/static_pages/_jp_first_sidebar_main_wrapper_left_middle_content_all_time.html.erb
+++ b/app/views/static_pages/_jp_first_sidebar_main_wrapper_left_middle_content_all_time.html.erb
@@ -7,38 +7,7 @@
           <% job_end = job_start.to_i + 9 %>
           <% @jobs.each_with_index do |job, index| %>
             <% if job_start <= index && index <= job_end %>
-              <div class="jp_job_post_main_wrapper_cont">
-                <div class="jp_job_post_main_wrapper">
-                  <div class="row">
-                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                      <div class="jp_job_post_side_img">
-                        <%= image_tag job.company.avatar.url, title: "post_img" %>
-                      </div>
-                      <div class="jp_job_post_right_cont">
-                        <h4><%= job.title %></h4>
-                        <p><%= job.company.name %></p>
-                        <ul>
-                          <li><i class="fas fa-money-bill-wave"></i>&nbsp; <%= number_with_delimiter job.salary %>$</li>
-                          <li><i class="fa fa-map-marker"></i>&nbsp; <%= job.company.address %></li>
-                        </ul>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                      <div class="jp_job_post_right_btn_wrapper">
-                        <ul>
-                          <li><a href="#"><i class="fa fa-heart-o"></i></a></li>
-                          <li><a href="#"><%= checked_type_job job %></a></li>
-                          <li>
-                            <%= link_to 'Apply now', job_path(job) %>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="jp_job_post_keyword_wrapper">
-                </div>
-              </div>
+              <%= render 'jobs/job_vertical', job: job %>
             <% end %>
           <% end %>
         </div>
