--- a/app/assets/stylesheets/custom_front_end.scss
+++ b/app/assets/stylesheets/custom_front_end.scss
@@ -93,10 +93,290 @@
   }
 
   p {
+    display: inline-block;
     text-align: justify;
+    width: 100%;
+  }
+
+  ul {
+    display: inline-table;
   }
 
   li {
     list-style: inside;
+  }
+}
+
+.tab-content {
+  .birthday {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #eee;
+  }
+}
+
+.login_wrapper {
+  .new_user {
+    input {
+      border: 1px solid #eee;
+      border-radius: 5px;
+      display: block;
+      padding: 10px;
+      width: 100%;
+    }
+
+    #user_remember_me {
+      display: none;
+    }
+  }
+}
+
+#error_explanation {
+  font-size: 16px;
+  color: red;
+
+  h2 {
+    font-size: 18px;
+  }
+}
+
+.require {
+  &::after {
+    content: "*";
+    color: red;
+  }
+}
+
+.avatar {
+  display: inline-block;
+  object-fit: cover;
+  object-position: center;
+
+  &.ava-medium {
+    width: 150px;
+    height: 150px;
+  border-radius: 50%;
+  }
+
+  &.ava-small {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+  }
+
+  &.ava-large {
+    width: 100%;
+    padding: 5px
+  }
+}
+
+.infor-dropdow {
+  width: 160px;
+  margin: auto;
+
+  .btn-group {
+    width: 100%;
+  }
+}
+
+.login_btn {
+  width: 100%;
+  line-height: 1.5em;
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.field_with_errors {
+  width: -webkit-fill-available;
+
+  input {
+    border-color: red !important;
+    background-color: #ff535340 !important;
+  }
+}
+
+a.dropdown-item {
+  display: block;
+  padding: 3px 10px;
+  &:hover {
+    background-color: #23C0E9;
+    color: white;
+  }
+}
+
+.dropdown-toggle span {
+  font-size: 18px;
+  margin-left: 10px;
+
+  i {
+    margin-left: 2px;
+  }
+}
+
+.point {
+  cursor: pointer;
+}
+
+.subtext {
+  font-size: 13px;
+  font-style: italic;
+}
+
+.float-right {
+  float: right;
+}
+
+.border-bottom {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #22c0e9;
+}
+
+img {
+  width: 100%;
+}
+
+.round {
+  border: 1px solid #cecece;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin: 10px;
+  
+  .link {
+    font-size: 20px;
+
+    i {
+      color: red;
+    }
+  }
+}
+
+.select-avatar {
+  position: relative;
+
+  .top-over {
+    display: none;
+    position: absolute;
+    background-color: #777777d1;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    text-align: center;
+    color: white;
+    
+    span {
+      margin-top: 50%;
+      display: block;
+      font-size: 25px;
+    }
+  }
+
+  &:hover .top-over {
+    display: block;
+  }
+
+}
+
+.resume-avatar {
+  object-fit: cover;
+  object-position: center;
+
+  &.large {
+    width: 300px;
+    height: 400px;
+  }
+
+  &.medium {
+    width: 75px;
+    height: 77px;
+  }
+}
+
+.jp_cp_profile_main_wrapper {
+  .container {
+    background-color: white;
+
+    &>.row {
+      padding: 20px;
+
+      form {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.primary_resume {
+  position: absolute;
+  top: 20px;
+  color: #ff9800;
+  left: 0;
+  font-size: 25px;
+}
+
+.fadeout {
+  display: none;
+  opacity: 0;
+  transition: all 1s ease-in-out;
+}
+
+@keyframes fadeout {
+  from { display: block; }
+  to   { display: none; }
+}
+
+.card-horizontal {
+  display: flex;
+  flex: 1 2 auto;
+
+  .company-image {
+    width: 180px;
+  }
+}
+
+.company-job {
+  .location,
+  .gender,
+  .job-type {
+    font-size: 13px;
+    padding: 3px 6px;
+  }
+
+  p {
+    margin-bottom: 0.4rem;
+  }
+
+  .end-at {
+    color: darkred;
+    font-weight: 500;
+  }
+  
+  .salary {
+    color: green;
+    font-weight: 700;
+  }
+
+  .dot-menu {
+    position: absolute;
+    right: 2px;
+    top: 2px;
+    z-index: 2;
+
+    .nav-item {
+      &:hover {
+        background-color: #e9e9e9;
+      }
+    }
+  }
+}
+
+.jp_cp_profile_main_wrapper {
+  h5.card-title {
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    display: block;
   }
 }
