--- a/app/views/jobs/_job_over_view.html.erb
+++ b/app/views/jobs/_job_over_view.html.erb
@@ -126,11 +126,14 @@
             <div class="jp_listing_right_bar_btn" id="apply-job">
               <ul>
                 <li>
-                  
                   <% if user_signed_in? %>
-                    <%= link_to apply_jobs_path(job), remote: true, data: {confirm: "Are you want to do this?"}, method: :post do %>
-                      <i class="fa fa-plus-circle"></i>&nbsp;
-                      APPLY NOW!
+                    <% if current_user&.candidate? & current_user.resumes.public_status.present? %>
+                      <%= link_to apply_jobs_path(job), remote: true, data: {confirm: "Are you want to do this?"}, method: :post do %>
+                        <i class="fa fa-plus-circle"></i>&nbsp;
+                        APPLY NOW!
+                      <% end %>  
+                    <% else %>
+                      <h3>You need to public your cv!!!</h3>
                     <% end %>
                   <% else %>
                     <%= link_to new_user_session_path do %>
