--- a/app/views/resumes/_add_on.html.erb
+++ b/app/views/resumes/_add_on.html.erb
@@ -2,11 +2,17 @@
   <div class="col-sm-12">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title col-sm-6"><%= add_on.title %></h5>
-        <p class="col-sm-6 text-right"><%= add_on.time %></p>
-        <p class="card-text">
-          <%= add_on.content %>
-        </p>
+        <div class="row">
+          <h5 class="card-title col-sm-6"><%= add_on.title %></h5>
+          <p class="col-sm-6 text-right"><%= add_on.time %></p>
+        </div>
+        <div class="row">
+          <div class="col col-sm-12">
+            <p class="card-text">
+              <%= raw add_on.content %>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
