--- a/app/views/resumes/_add_on.html.erb
+++ b/app/views/resumes/_add_on.html.erb
@@ -9,7 +9,7 @@
         <div class="row">
           <div class="col col-sm-12">
             <p class="card-text">
-              <%= raw add_on.content %>
+              <%= sanitize add_on.content %>
             </p>
           </div>
         </div>
