--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1215,13 +1215,14 @@ ul{
 	text-transform:uppercase;
 	font-weight:bold;
 	padding-top:30px;
+	height: 65px;
+  text-align: center;
 }
 .jp_hiring_content_wrapper p{
 	font-size:14px;
 	padding-top:5px;
 }
 .jp_hiring_content_wrapper li a{
-	float:left;
 	width:110px;
 	height:30px;
 	line-height:30px;
@@ -1230,6 +1231,8 @@ ul{
 	background:#0e1427;
 	font-size:12px;
 	font-weight:bold;
+	display: block;
+	margin: auto;
 	-webkit-border-radius:8px;
 	-moz-border-radius:8px;
 	border-radius:8px;
